Replace system properties by log config values